--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -59,4 +59,4 @@ use-filedir-conf
 write-filename-in-watch-later-config
 
 # Start mpv with a window that's at least 75% of your screen resolution.
-autofit-smaller = 80%x80%
+autofit = 80%x80%
