--- a/firefox/Makefile
+++ b/firefox/Makefile
@@ -1,3 +1,19 @@
+# The Firefox version shipped with Debian stable [1] is
+# usually outdated.  This makefile fetches the latest x64
+# tarball distributed by Mozilla and unpacks it in the right
+# directories.  It also installs a policy file [2] that
+# disables some telemetry and as well as annoying "update
+# available" [3] notifications.
+#
+# Run `make install` to install (or update) the latest
+# version and `make clean` afterwards to remove temporary
+# files.
+#
+# [1]: https://packages.debian.org/search?suite=stable&searchon=names&keywords=firefox
+# [2]: https://github.com/mozilla/policy-templates
+# [3]: https://linuxreviews.org/HOWTO_Make_Mozilla_Firefox_Stop_Nagging_You_About_Updates_And_Other_Annoying_Idiocy
+#
+
 .PHONY: install uninstall clean
 
 install:
