--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -50,6 +50,10 @@ set-option -g pane-border-style fg=brightblack
 set-window-option -g automatic-rename on
 set-window-option -g automatic-rename-format "#{pane_current_command}"
 
+# Update status (e.g., window names) every 5 seconds,
+# instead of the usual 15.
+set-option -g status-interval 5
+
 # Set terminal window titles.
 set-option -g set-titles on
 set-option -g set-titles-string "#I:#W"
