mpv: mirror video keybinding

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -12,7 +12,7 @@ force-window = yes
 
 # Forcibly enable any hardware decoder found.  On modern Intel mobile CPUs, the
 # vaapi decoder is selected if no other decoders are found.
-hwdec = auto
+hwdec = auto-copy
 
 # Loop playlist infinitely.
 loop = inf
