--- a/mpv/.config/mpv/input.conf
+++ b/mpv/.config/mpv/input.conf
@@ -5,3 +5,9 @@ KP9 seek 600
 - add audio-delay -0.100
 
 A cycle-values video-aspect "16:9" "16:10" "4:3" "2.21:1" "2.35:1" "2.39:1" "5:4" "1:1" "-1"
+
+# Mirror video using M.
+# Note that the "hwdec" value in mpv.conf may need to be
+# tweaked for video filters to work -- not all hardware
+# decoders seem to support them.
+M vf toggle hflip
