--- a/youtube-dl/.config/youtube-dl.conf
+++ b/youtube-dl/.config/youtube-dl.conf
@@ -23,3 +23,5 @@
 
 # Use aria2 as an external downloader
 --external-downloader aria2c
+
+--format 'bestvideo[height<=?1080]+bestaudio/best[height<=?1080]/best'
