--- a/mpv/.config/mpv/input.conf
+++ b/mpv/.config/mpv/input.conf
@@ -1,7 +1,7 @@
 KP3 seek -600
-KP9 seek 600
+KP9 seek  600
 
-= add audio-delay 0.100
+= add audio-delay  0.100
 - add audio-delay -0.100
 
 A cycle-values video-aspect "16:9" "16:10" "4:3" "2.21:1" "2.35:1" "2.39:1" "5:4" "1:1" "-1"
@@ -10,4 +10,11 @@ A cycle-values video-aspect "16:9" "16:10" "4:3" "2.21:1" "2.35:1" "2.39:1" "5:4
 # Note that the "hwdec" value in mpv.conf may need to be
 # tweaked for video filters to work -- not all hardware
 # decoders seem to support them.
-M vf toggle hflip
+M no-osd vf toggle hflip
+
+] add speed  0.25
+[ add speed -0.25
+
+# Rotate video (clockwise or counter clockwise) with } and {.
+} no-osd cycle video-rotate  90
+{ no-osd cycle video-rotate -90
