--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -3,28 +3,30 @@ Host *
     Compression yes
     ServerAliveCountMax 5
     ServerAliveInterval 120
+
     # Don't hash hostnames in ~/.ssh/known_hosts
     # It doesn't provide much security anyway:
     # https://security.stackexchange.com/q/56268
     HashKnownHosts no
+
+    # Create a socket file which allows the initial ssh connection to
+    # a host be reused and optionally persist after the initial session
+    # has disconnected.
+    ControlMaster auto
+    ControlPath ~/.ssh/controlmasters/%r@%h:%p
+    ControlPersist 5
 
 Host boron
     HostName 192.168.1.100
     User manu
     ForwardX11 yes
 
-Host lithium
-    HostName 192.168.1.101
-    User manu
-    ForwardX11 yes
+Host kobo
+    HostName 192.168.0.101
+    User root
 
 Host comet
     HostName 95.168.162.225
     User spinor
     LocalForward 2200 95.168.162.225:22
     DynamicForward 1234
-
-Host smatter
-    HostName smatter-login.syr.edu
-    User mmannatt
-    ForwardX11 yes
