--- a/mpv/.config/mpv/input.conf
+++ b/mpv/.config/mpv/input.conf
@@ -1,5 +1,11 @@
-KP3 seek -600
-KP9 seek  600
+# Defaults: https://raw.githubusercontent.com/mpv-player/mpv/master/etc/input.conf
+
+# Move forward/backward with mouse weel.
+wheel_up seek 300
+wheel_down seek -300
+
+kp3 seek -600
+kp9 seek  600
 
 = add audio-delay  0.100
 - add audio-delay -0.100
