--- a/aria2/.aria2/aria2.conf
+++ b/aria2/.aria2/aria2.conf
@@ -31,3 +31,6 @@ http-accept-gzip = true
 
 # Don't bother with certificate check.
 check-certificate = false
+
+# Wait 30 secs before retrying.
+retry-wait = 30
