--- a/mpv/.config/mpv/input.conf
+++ b/mpv/.config/mpv/input.conf
@@ -1,11 +1,12 @@
 # Defaults: https://raw.githubusercontent.com/mpv-player/mpv/master/etc/input.conf
 
-# Move forward/backward with mouse weel.
-wheel_up seek 300
-wheel_down seek -300
+# Move forward/backward with mouse wheel.
+wheel_up   seek  30
+wheel_down seek -30
 
-kp3 seek -600
-kp9 seek  600
+# Shift + mouse wheel = volume adjust.
+shift+wheel_up   add volume 5
+shift+wheel_down add volume -5
 
 = add audio-delay  0.100
 - add audio-delay -0.100
