--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,8 +32,8 @@ set-option -g renumber-windows on
 # ---------------
 
 # Status line.
-set-option -g status-bg "default"
-set-option -g status-fg "default"
+set-option -g status-bg "#000000"
+set-option -g status-fg "#ffffff"
 set-option -g status-left "#[fg=brightgreen]#S #[fg=brightwhite]: "
 set-option -g status-right "#[fg=brightyellow](#h)"
 set-option -g window-status-format "#[fg=brightcyan]#I #W"
