--- a/i3/.config/i3/i3status.conf
+++ b/i3/.config/i3/i3status.conf
@@ -11,8 +11,18 @@ general {
   interval = 5
 }
 
-order += "wireless _first_"
-order += "battery all"
+| case $(uname -n) in
+|   magrathea) cat <<EOF
+|     order += "ethernet eno1"
+|   EOF
+|   ;;
+|   *) cat <<EOF
+|     order += "wireless _first_"
+|     order += "battery all"
+|   EOF
+|   ;;
+| esac
+
 order += "cpu_usage"
 order += "cpu_temperature 0"
 order += "volume master"
@@ -21,6 +31,11 @@ order += "tztime local"
 wireless _first_ {
   format_up = "wifi%quality (%essid)"
   format_down = "wifi down"
+}
+
+ethernet eno1 {
+  format_up = "%interface %ip"
+  format_down = "%interface down"
 }
 
 battery all {
@@ -43,7 +58,7 @@ cpu_usage {
 
 cpu_temperature 0 {
   format = "tmp %degrees°"
-  path = "/sys/class/thermal/thermal_zone0/temp"
+  path = "/sys/class/thermal/thermal_zone1/temp"
   max_threshold = 90
 }
 
