i3status: use first eth interface

--- a/i3/.config/i3/i3status.conf
+++ b/i3/.config/i3/i3status.conf
@@ -13,7 +13,11 @@ general {
 
 | case $(uname -n) in
 |   magrathea) cat <<EOF
-|     order += "ethernet eno1"
+|     order += "ethernet _first_"
+|     ethernet _first_ {
+|       format_up = "%interface up"
+|       format_down = "%interface down"
+|     }
 |   EOF
 |   ;;
 |   *) cat <<EOF
@@ -31,11 +35,6 @@ order += "tztime local"
 wireless _first_ {
   format_up = "wifi%quality (%essid)"
   format_down = "wifi down"
-}
-
-ethernet eno1 {
-  format_up = "%interface %ip"
-  format_down = "%interface down"
 }
 
 battery all {
