--- a/i3/.config/i3/i3status.conf
+++ b/i3/.config/i3/i3status.conf
@@ -20,7 +20,7 @@ general {
 |     }
 |   EOF
 |   ;;
-|   *) cat <<EOF
+|   boron|lithium) cat <<EOF
 |     order += "wireless _first_"
 |     order += "battery all"
 |   EOF
@@ -47,17 +47,17 @@ battery all {
   hide_seconds = true
 }
 
-load {
-  format = "%5min"
-}
-
 cpu_usage {
   format = "cpu %usage"
 }
 
 cpu_temperature 0 {
+  | case $(uname -n) in
+  |   boron|lithium)  echo 'path = "/sys/class/thermal/thermal_zone0/temp"' ;;
+  |   magrathea)      echo 'path = "/sys/class/thermal/thermal_zone1/temp"' ;;
+  | esac
+
   format = "tmp %degrees°"
-  path = "/sys/class/thermal/thermal_zone1/temp"
   max_threshold = 90
 }
 
