--- a/i3/.config/i3/i3status.conf
+++ b/i3/.config/i3/i3status.conf
@@ -38,7 +38,7 @@ wireless _first_ {
 }
 
 battery all {
-  format = "batt %percentage %remaining (%status)"
+  format = "%status %percentage %remaining"
   status_chr = "char"
   status_bat = "batt"
   status_unk = "unkw"
