--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -3,10 +3,6 @@
 # Pick english subtitles if available.
 slang = en,eng,enUS,en-US,enGB,en-GB,unknown
 
-# Force stereo audio since I almost always watch movies with a headphone (e.g.,
-# 5 channel audio will be converted to stereo)
-audio-channels = "stereo"
-
 # Always show window, even for audio files.
 force-window = yes
 
@@ -14,8 +10,9 @@ force-window = yes
 # vaapi decoder is selected if no other decoders are found.
 hwdec = auto-copy
 
-# Loop playlist infinitely.
-loop = inf
+# Do not terminate when playing or seeking beyond the end of the file, and
+# there is no next file to be played.
+keep-open = yes
 
 # Font for OSD.
 osd-font = "Nimbus Sans L"
@@ -60,3 +57,10 @@ write-filename-in-watch-later-config
 
 # Start mpv with a window that's at least 80% of your screen resolution.
 autofit = 80%x80%
+
+                     # --- depreciated options ---
+
+# Option to force stereo audio (I almost always watch movies with
+# a headphone).  This is no longer require with Pulse Audio, which
+# automatically remixes surround sound if headphones are being used.
+# audio-channels = "stereo"
