--- a/xnview/.config/xnviewmp/xnview.ini
+++ b/xnview/.config/xnviewmp/xnview.ini
@@ -2,16 +2,17 @@
 startInFull=0
 sessionFlag=2
 updater=0
-OpenWith=/usr/bin/darktable, /usr/bin/gimp
-OpenWithName=Darktable, Gimp
+OpenWith=/usr/bin/gimp, /usr/bin/inkscape
+OpenWithName=Gimp, Inkscape
 
 [Browser]
 customFilter=1409
 thumbnailFilter=1153
 
-[Viewer]
-infoTemplate={EXIF:Focal Length}mm f/{EXIF:F-Number} {EXIF:Exposure Time}s at ISO {EXIF:ISO Value}\n{Width}x{Height} ({Size})
-viewFilter=1025
-
 [%General]
 showAgain=65536
+
+[Viewer]
+defaultFullscreenFit=2
+fullBackColor=51 51 51
+infoTemplate=
