--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -3,6 +3,9 @@
 # Pick english subtitles if available.
 slang = en,eng,enUS,en-US,enGB,en-GB,unknown
 
+# Replay infinitely.
+loop = inf
+
 # Always show window, even for audio files.
 force-window = yes
 
@@ -36,6 +39,9 @@ sub-auto = all
 
 # Color of subtitles r/g/b (yellow).
 sub-color = 1.0/0.75/0.0
+
+# Postion of subtitles relative to the screen (in percentage).
+sub-pos = 90
 
 # Font for subtitles.
 sub-font = "Nimbus Sans L"
