--- a/qpdfview/.config/qpdfview/shortcuts.conf
+++ b/qpdfview/.config/qpdfview/shortcuts.conf
@@ -13,6 +13,7 @@ convertToGrayscale=@Invalid()
 copyToClipboardMode=@Invalid()
 darkenWithPaperColor=@Invalid()
 editToolBarToggleView=@Invalid()
+email=@Invalid()
 exit=@Invalid()
 fileToolBarToggleView=@Invalid()
 findNext=Ctrl+N
@@ -22,6 +23,7 @@ fitToPageSizeMode=+
 fitToPageWidthMode=_
 fullscreen=@Invalid()
 invertColors=Shift+I
+invertLightness=Ctrl+Shift+I
 jumpBackward=Ctrl+O
 jumpForward=Ctrl+I
 jumpToPage=Ctrl+G
