xnview: use dark theme

--- a/xnview/.config/xnviewmp/xnview.ini
+++ b/xnview/.config/xnviewmp/xnview.ini
@@ -4,6 +4,7 @@ sessionFlag=2
 updater=0
 OpenWith=/usr/bin/gimp, /usr/bin/inkscape
 OpenWithName=Gimp, Inkscape
+style=-2
 
 [Browser]
 customFilter=1409
@@ -15,6 +16,7 @@ showAgain=65536
 [Viewer]
 defaultFullscreenFit=2
 fullBackColor=51 51 51
+backColor=51 51 51
 infoTemplate=
 inZoomFilter=5
 outZoomFilter=5
