X11: enable DRI3 for Intel GPU

--- a/etc/X11/xorg.conf.d/intel.conf
+++ b/etc/X11/xorg.conf.d/intel.conf
@@ -1,13 +1,20 @@
 # /etc/X11/xorg.conf.d/intel.conf
-#
-# This fixes tearing problems with video playback sometimes seen in
-# systems with integrated Intel graphics.  Worked even on an old 2008
-# Acer desktop.
-#
 
+# This fixes tearing problems with video playback sometimes seen in
+# systems with integrated Intel graphics.  See the intel(4) man page for
+# detailed descriptions of the options.
 Section "Device"
-   Identifier  "Intel Graphics"
-   Driver      "intel"
-   Option      "AccelMethod" "sna"
-   Option      "TearFree" "true"
+    Identifier "Intel Graphics"
+    Driver "intel"
+    Option "TearFree" "true"
+EndSection
+
+# For some reason DRI3 (Direct Rendering Infrastructure v3) is not
+# loaded when the option is put under the device section, but this seems
+# to work.  DRI3 is required by some games on Steam.
+# https://www.reddit.com/r/linuxquestions/comments/c7dvol/comment/eseq6c3/
+Section "OutputClass"
+    Identifier "Intel driver settings"
+    MatchDriver "i915"
+    Option "DRI" "3"
 EndSection
