--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -47,6 +47,9 @@ sub-pos = 90
 sub-font = "Nimbus Sans L"
 sub-font-size = 42
 
+# Force my subtitle style no matter what.
+sub-ass-override = strip
+
 # Pretend to be Google Chrome on Windows.
 user-agent = "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.101 Safari/537.36"
 
