--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -3,8 +3,8 @@
 # Pick english subtitles if available.
 slang = en,eng,enUS,en-US,enGB,en-GB,unknown
 
-# Replay infinitely.
-loop = inf
+# Replay both file and playlist infinitely.
+loop-playlist = inf
 
 # Always show window, even for audio files.
 force-window = yes
