--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -55,6 +55,17 @@
         </edit>
     </match>
 
+    <!-- Fix Century Schoolbook detection.  Some PDFs don't embed this
+    font properly (e.g., PDFs from Macromolecules) -->
+    <match target="pattern">
+        <test name="family">
+            <string>NewCenturySchlbk</string>
+        </test>
+        <edit name="family" mode="assign">
+            <string>Century Schoolbook</string>
+        </edit>
+    </match>
+
     <!-- Use Noto fonts for Malayalam -->
     <match target="font">
         <test name="lang" compare="contains">
