--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -339,6 +339,9 @@ for_window [class="Liferea"] focus
 for_window [class="Zeal"] move container to workspace $ws2
 for_window [class="Zeal"] focus
 
+for_window [class="Ferdium"] move container to workspace $ws2
+for_window [class="Ferdium"] focus
+
 # Media (workspace $ws3) {{{2
 # ---------------------------
 
