--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -4,7 +4,7 @@
 slang = en,eng,enUS,en-US,enGB,en-GB,unknown
 
 # Replay both file and playlist infinitely.
-loop-playlist = inf
+loop = inf
 
 # Always show window, even for audio files.
 force-window = yes
@@ -30,12 +30,12 @@ volume-max = 300
 save-position-on-quit
 
 # Screenshots in PNG with high compression in the parent directory of the video.
-screenshot-format = png
-screenshot-png-compression = 9
+screenshot-format = jpg
+# screenshot-png-compression = 9
 screenshot-template = "%x%F_%n"
 
 # Load all subtitles in the current directory.
-sub-auto = all
+sub-auto = fuzzy
 
 # Color of subtitles r/g/b (yellow).
 sub-color = 1.0/0.75/0.0
@@ -63,10 +63,3 @@ write-filename-in-watch-later-config
 
 # Start mpv with a window that's at least 80% of your screen resolution.
 autofit = 80%x80%
-
-                     # --- depreciated options ---
-
-# Option to force stereo audio (I almost always watch movies with
-# a headphone).  This is no longer require with Pulse Audio, which
-# automatically remixes surround sound if headphones are being used.
-# audio-channels = "stereo"
