ssh: bx11 details

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -30,3 +30,8 @@ Host comet
     User spinor
     LocalForward 2200 95.168.162.225:22
     DynamicForward 1234
+
+Host bx11
+    User u455095
+    Port 23
+    Hostname u455095.your-storagebox.de
