tmux: (partially) fix dbus issues

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,6 +28,14 @@ set-option -g mouse on
 # When a window is closed, rename the other windows in numerical order.
 set-option -g renumber-windows on
 
+# Make sure that new panes get the current $DBUS_SESSION_BUS_ADDRESS and
+# $DISPLAY.  This will not change their values in existing panes.  One
+# way to update the environment variables for older panes is to use
+# a send-key command before running tmux.  But this is an ugly kludge.
+# So at the moment, we are left with a partially working, semi-optimal
+# solution. https://superuser.com/a/882677
+set -g update-environment "DBUS_SESSION_BUS_ADDRESS DISPLAY"
+
 # Appearance {{{1
 # ---------------
 
