--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -32,6 +32,6 @@ Host comet
     DynamicForward 1234
 
 Host bx11
+    Hostname 167.235.175.63
     User u455095
     Port 23
-    Hostname u455095.your-storagebox.de
