--- a/etc/thinkfan.conf
+++ b/etc/thinkfan.conf
@@ -14,21 +14,22 @@
 tp_fan /proc/acpi/ibm/fan
 
 # Find the type of thermal_zone before adding, e.g., on my P43s
-# thermal_zone7 is the WiFi adapter:
+# thermal_zone6 is the WiFi adapter:
 #
-#   $ cat /sys/devices/virtual/thermal/thermal_zone7/type
+#   $ cat /sys/devices/virtual/thermal/thermal_zone6/type
 #   iwlwifi_1
 #
 # However, the WiFi module gets loaded in the end, after ThinkFan
 # starts.  This causes ThinkFan to fail since it can't read
-# thermal_zone7's temperature.
+# thermal_zone6's temperature.
 hwmon /sys/devices/virtual/thermal/thermal_zone0/temp
 hwmon /sys/devices/virtual/thermal/thermal_zone1/temp
 hwmon /sys/devices/virtual/thermal/thermal_zone2/temp
 hwmon /sys/devices/virtual/thermal/thermal_zone3/temp
 hwmon /sys/devices/virtual/thermal/thermal_zone4/temp
 hwmon /sys/devices/virtual/thermal/thermal_zone5/temp
-hwmon /sys/devices/virtual/thermal/thermal_zone6/temp
+# hwmon /sys/devices/virtual/thermal/thermal_zone6/temp # WiFi
+hwmon /sys/devices/virtual/thermal/thermal_zone7/temp
 
 (0,	0,	54)
 (1,	52,	60)
