--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -35,7 +35,7 @@ screenshot-format = jpg
 screenshot-template = "%x%F_%n"
 
 # Load all subtitles in the current directory.
-sub-auto = fuzzy
+sub-auto = all
 
 # Color of subtitles r/g/b (yellow).
 sub-color = 1.0/0.75/0.0
@@ -63,3 +63,6 @@ write-filename-in-watch-later-config
 
 # Start mpv with a window that's at least 80% of your screen resolution.
 autofit = 80%x80%
+
+# yt-dlp quality.
+ytdl-format = 'bestvideo[height<=?1080]+bestaudio/best[height<=?1080]/best'
