--- a/youtube-dl/.config/youtube-dl.conf
+++ b/youtube-dl/.config/youtube-dl.conf
@@ -1,21 +1,15 @@
 # vim: ft=conf fdm=marker et sts=2 sw=2
 
-# Restrict filenames to only ASCII characters, and avoid "&" and spaces in filenames
---restrict-filenames
-
 # Don't bother to check SSL certificates.
 --no-check-certificate
 
 # Specify a custom user agent.
 --user-agent 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.101 Safari/537.36'
 
-# Write subtitle file.
---write-sub
-
 # Languages of the subtitles to download separated by commas.
 --sub-lang en,eng,enUS,en-US,enGB,en-GB,unknown
 
-# Embed subtitles in the video (only for mp4 videos).
+# Embed subtitles in the video.
 --embed-subs
 
 # Prefer ffmpeg over avconv for running the postprocessors.
